# packman

./: Cargo.toml  DEV.txt  LICENSE  Makefile  README.md  TODO.txt  demo_data  massif.out.21100  plan.txt  plan2.txt  plan3.txt  readme.md
src/: fs.rs  lib.rs
tests/: pack_test.rs  pack_try_from_test.rs  vecpack_test.rs
